<resources>
    <string name="app_name">DriveGuard</string>
    <string name="title_activity_start_trip">Start Trip</string>
    <string name="preferences_file" translatable="false">preferences</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="data_collection">Data Collection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Username">Username</string>
    <string name="profile_picture">The users profile picture</string>
    <string name="signup">Sign up</string>
    <string name="logout">Logout</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="go_sleep">Go To SLEEP</string>
    <string name="good_day">Good Day</string>
    <string name="guest">Guest</string>
    <string name="your_average_score">Your Average Score:</string>
    <string name="drive_slow">Drive at a steady speed to save fuel and keep your insurance rates low!</string>
    <string name="drive_slow2">Slow down to stay safe! Speeding increases your risk of accidents and tickets.</string>
    <string name="brake_slow">Sudden stops can wear out your brakes. Anticipate traffic and brake gradually!</string>
    <string name="start_slow">Smooth starts save fuel and reduce wear on your car. Accelerate gently for a better drive!</string>
    <string name="turn_slow">Take turns at a steady speed to stay in control and keep passengers comfortable.</string>
    <string name="what_you_can_do_to_improve_your_driving">What You Can Do to Improve Your Driving</string>
    <string name="speed_limit">Speed Limit:</string>
    <string name="your_speed">Your Speed:</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="description_dashboard">A dashboard icon that opens the home screen</string>
    <string name="description_help_button">A help icon button that opens the help screen</string>
    <string name="description_trip_button">A car icon button that opens the trip screen</string>
    <string name="description_trip_history_button">A history icon button that opens the trip history screen</string>
    <string name="faq1_header">How is my trip score calculated?</string>
    <string name="faq1_body">Your driving score is calculated based on factors such as speeding, hard acceleration, hard braking, sharp turning. External conditions like weather are also considered.</string>
    <string name="faq2_header">What data does the app collect?</string>
    <string name="faq2_body">Your speed, your g-force, your turning radius, your location, the weather, trip duration, and trip times. All data is secure.</string>
    <string name="faq3_header">Can I delete my data?</string>
    <string name="faq3_body">While you are not able to delete any individual trip data (for data integrity reasons), you are able to delete you account at any time in the profile screen</string>
    <string name="faq4_header">What if the app crashes during a trip?</string>
    <string name="faq4_body">If the app crashes or you leave the app, safely pull over and stop the vehicle, then relaunch it and start a new trip. Partial trip data up to the point of failure will be saved</string>
    <string name="faq">FAQ</string>
    <string name="support_email">Can\'t Find Your Answer Here? Email Us At: support.driveguard@brookecronin.com</string>
    <string name="delete_account">Delete Account</string>
</resources>