<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/button_deck" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Trip Controls"
        app:titleTextColor="@color/textColorPrimary" />

    <ToggleButton
        android:id="@+id/startButton"
        android:layout_width="246dp"
        android:layout_height="152dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="83dp"
        android:background="@drawable/button_trip_toggle"
        android:checked="false"
        android:textOff="@string/start_trip"
        android:textOn="@string/stop_trip"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="124dp"
        android:text="@string/speed_limit"
        android:textSize="40sp"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="176dp"
        android:text="@string/your_speed"
        android:textSize="40sp"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>